<resources>
    <string name="app_name">Some Stupid App</string>
    <string name="description">Description</string>
    <string name="name">Name</string>
    <string name="app_title">Quản lý công việc</string>
    <string name="list_title">Danh sách công việc</string>
    <string name="add_title">Thêm mới công việc</string>
    <string name="date">Date:</string>
    <string name="add">Add</string>
    <string name="update">Update</string>
    <string name="search">Search...</string>
    <string name="hint_name">Tên công việc</string>
    <string name="hint_description">Mô tả</string>
    <string name="hint_deadline">Ngày hoàn thành</string>
    <string name="hint_status">Tình trạng</string>
    <string name="hint_party">Cộng tác?</string>
    <string name="button_save">Lưu</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>